# incv-community-detection

./: .Rbuildignore  DESCRIPTION  LICENSE  NAMESPACE  NEWS.md  README.md
R/: INCVCommunityDetection-package.R  croissant.R  ecv.R  estimation.R  incv.R  ncv.R  simulation.R  spectral.R  utils.R
man/: AUC.Rd  ECV.for.blockmodel.Rd  ECV.undirected.Rank.Rd  INCVCommunityDetection-package.Rd  NCV.for.blockmodel.Rd  SBM.prob.Rd  SBM.spectral.clustering.Rd  auroc.Rd  best.perm.label.match.Rd  bin.dev.Rd  blockmodel.gen.fast.Rd  community.sim.Rd  community.sim.sbm.Rd  croissant.blockmodel.Rd  croissant.latent.Rd  croissant.rdpg.Rd  croissant.tune.regsp.Rd  edge.index.map.Rd  eigen.DCBM.est.Rd  fast.DCBM.est.Rd  fast.SBM.est.Rd  l2.Rd  latent.gen.Rd  matched.lab.Rd  modal.Rd  neglog.Rd  nscv.f.fold.Rd  nscv.random.split.Rd  sparse.RDPG.gen.Rd  sumFast.Rd
python/: .gitignore  LICENSE  README.md  pyproject.toml
python/examples/: example_quickstart.py  example_senate.py  example_trade.py
python/incv/: __init__.py  applications.py  competitors.py  core.py  plotting.py  simulations.py
python/incv/data/: TradeAttributes.csv  senate_108.csv  senate_108_attribute.csv
python/tests/: test_competitors.py  test_core.py  test_simulations.py
tests/: test_package.R  test_standalone.R  testthat.R  toy_example.R
tests/testthat/: test-ecv-ncv.R  test-estimation.R  test-incv.R  test-simulation.R  test-spectral.R  test-utils.R
vignettes/: introduction.Rmd
