[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "incv-community-detection"
version = "0.1.0"
description = "Inductive Node-Splitting Cross-Validation for community detection in networks"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    {name = "Lin Zhang", email = "linzhang1126@gmail.com"},
    {name = "Bokai Yang"},
]
keywords = [
    "community-detection",
    "cross-validation",
    "network-analysis",
    "stochastic-block-model",
    "spectral-clustering",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = [
    "numpy>=1.22",
    "scipy>=1.8",
    "scikit-learn>=1.0",
    "pandas>=1.4",
    "matplotlib>=3.5",
]

[project.optional-dependencies]
network = ["networkx>=2.8"]
all = ["networkx>=2.8"]
dev = [
    "pytest>=7.0",
    "networkx>=2.8",
]

[project.urls]
Homepage = "https://github.com/ivylinzhang97/incv-community-detection"
Repository = "https://github.com/ivylinzhang97/incv-community-detection"
Issues = "https://github.com/ivylinzhang97/incv-community-detection/issues"

[tool.setuptools.packages.find]
include = ["incv*"]

[tool.setuptools.package-data]
incv = ["data/*.csv"]

[tool.pytest.ini_options]
testpaths = ["tests"]
